<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chat_list_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/chat_list_background"
    tools:context=".ChatListActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout_chat_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/chat_list_toolbar_background"
        android:theme="@style/ThemeOverlay.AppCompat.Light"> <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_chat_list"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/toolbar_logo_chat_list"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:src="@drawable/ic_logo_transparent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/chat_list_logo_content_description"
                android:layout_marginEnd="16dp"/>

            <ImageButton
                android:id="@+id/toolbar_menu_button_chat_list"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_kebab_menu_24" android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="12dp"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/chat_list_menu_icon_description"
                app:tint="@color/pink"/>

            <ImageButton
                android:id="@+id/toolbar_new_chat_button_chat_list"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_new_chat_24"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="12dp"
                android:layout_toStartOf="@id/toolbar_menu_button_chat_list"
                android:contentDescription="@string/chat_list_new_chat_icon_description"
                app:tint="@color/pink"/>

            <ImageButton
                android:id="@+id/toolbar_bookmark_button_chat_list"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_bookmark_24"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="12dp"
                android:layout_toStartOf="@id/toolbar_new_chat_button_chat_list"
                android:contentDescription="@string/chat_list_bookmark_icon_description"
                app:tint="@color/pink"/>

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_chat_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app_bar_layout_chat_list"
        android:layout_above="@+id/bottom_navigation_chat_list"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:clipToPadding="false"
        tools:listitem="@layout/list_item_chat"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation_chat_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/bottom_nav_background_bookmarks"
        app:itemIconTint="@color/bottom_nav_item_selector"
        app:itemTextColor="@color/bottom_nav_item_selector"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/bottom_navigation_menu" />

</RelativeLayout>
